# OptiMind

./: .env.example  .gitignore  OPTIMIZATION_TODO.md  PROJECT.md  README.md  ROADMAP.md  SYSTEM_ARCHITECTURE.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.toml  keyword_mapping.toml
config/ontology/: assignment.yaml  facility_location.yaml  inventory.yaml  knapsack.yaml  network_flow.yaml  scheduling.yaml  transportation.yaml
dashboard/: app.py
docker/: Dockerfile  docker-compose.yml
docs/architecture/: 01-architecture-overview.md  02-system-context-container.md  03-domain-model.md  04-data-intelligence-layer.md  05-optimization-intelligence-layer.md  06-solver-layer.md  07-decision-intelligence-layer.md  08-workflow-orchestration-layer.md  09-infrastructure-deployment.md  10-system-summary.md
docs/specs/: API_SPEC.md  CODING_STANDARD.md  DATA_SPEC.md  IR_SPEC.md  ONTOLOGY_SPEC.md  TEST_SPEC.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: test_llm_config.py
skills/: decision_agent.md  orchestrator_agent.md
src/opti_mind/: __init__.py  config.py  logging_setup.py  main.py
tests/: conftest.py
tests/api/: conftest.py  test_health.py  test_optimize.py  test_sessions.py
tests/decision/: __init__.py  test_decision.py  test_interpreter.py  test_recommendation.py  test_risk.py  test_scenario.py  test_sensitivity.py
tests/fixtures/: assignment.csv  facility_location.csv  inventory.csv  knapsack.csv  network_flow.csv  scheduling.csv  scheduling_small.csv  transportation.csv
tests/unit/: test_end_to_end.py  test_exceptions.py  test_main.py  (+3 more)
(+119 files in other folders)
