[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'opti-mind'
description = 'OptiMind - AI-native Optimization Copilot'
version = '0.1.0'
requires-python = '>=3.11'
 dependencies = [
     'fastapi>=0.109.0',
     'uvicorn>=0.27.0',
     'pydantic>=2.5.0',
     'pydantic-settings>=2.0.0',
     'pandas>=2.1.0',
     'numpy>=1.26.0',
     'highspy>=1.5.0',
     'langgraph>=0.0.50',
     'langgraph-checkpoint-sqlite>=1.0.0',
     'langchain>=0.1.0',
     'langchain-openai>=0.1.0',
     'requests>=2.31.0',
     'pyyaml>=6.0.0',
     'streamlit>=1.30.0',
     'jinja2>=3.1.0',
 ]

[project.optional-dependencies]
dev = ['pytest>=8.0.0', 'pytest-cov>=4.1.0', 'pytest-asyncio>=0.23.0', 'mypy>=1.8.0', 'ruff>=0.2.0', 'black>=24.1.0', 'pre-commit>=3.6.0']

[tool.setuptools.packages.find]
where = ['src']

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = 'py311'

[tool.ruff.lint]
select = ['E', 'F', 'I', 'N', 'W', 'UP', 'B', 'C4', 'SIM']
ignore = ['D400', 'D415', 'D101', 'D102', 'D103', 'D104', 'D105', 'D107']

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.mypy]
python_version = '3.11'
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ['opti_mind.data.*', 'opti_mind.solver.*']
strict = false

[tool.pytest.ini_options]
minversion = '8.0'
testpaths = ['tests']
markers = ['solver: marks tests requiring CPLEX solver license']
